Fix category filters and visual improvements on small screens

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -162,3 +162,7 @@
 .cursor-pointer {
     cursor: pointer;
 }
+
+.min-vh-50 {
+    min-height: 50vh;
+}
